--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ buildscript {
         def truth_version = '1.1.3'
         def room_version = '2.4.1'
         def work_version = '2.7.1'
+        def coroutines_version = '2.6.2'
 
         libraries = [
 
